# simple_rust_websocket_client

./: Cargo.toml
src/: main.rs
src/structs/: chat_controller.rs  event.rs  messages.rs
